Registrando produccion y cambiando versión de base de datos para id auto
